Fixed issue where the datepicker onChange event was not being triggered because of wrapping Space tag, added more safety checks to the due date input, moved the due date mode toogle to the label side of the form

--- a/src/components/AppointmentForm/AppointmentForm.styles.scss
+++ b/src/components/AppointmentForm/AppointmentForm.styles.scss
@@ -1,15 +1,4 @@
 .due-date-wrapper {
-    .ant-space-horizontal {
-        width: 100%;
-
-        & > .ant-space-item:nth-child(1) {
-            flex: 1;
-        }
-        & > .ant-space-item:nth-child(2) {
-            flex: 0;
-        }
-    }
-
     .due-date-toogle {
         svg {
             height: 24px;
